Added constraints, default values and indexes for Entities and sql migration scripts. Minor fixes.